--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "react-portfolio",
-  "homepage": "http://marymc13.github.io/portfolio",
+  "homepage": "https://marymc13.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
